# Mug-Simulator-2017

./: .gitignore  CMakeLists.txt  README.md
data/: mug01.pcd  mug01.ply  mug01N.ply  mug01_d.ply  mug01_g.pose  mug01_r.ply  mug02.pcd  mug02.ply  mug02N.ply  mug02_d.ply  mug02_g.pose  mug02_r.ply  mug03.pcd  mug03.ply  mug03N.ply  mug03_d.ply  mug03_g.pose  mug03_r.ply  mug04.pcd  mug04.ply  mug04N.ply  mug04_d.ply  mug04_g.pose  mug04_r.ply  mug05.pcd  mug05.ply  mug05N.ply  mug05_d.ply  mug05_g.pose  mug05_r.ply  mug06.pcd  mug06.ply  mug06N.ply  mug06_d.ply  mug06_g.pose  mug06_r.ply  mug07.pcd  mug07N.ply  mug07_d.ply  mug07_g.pose  (+41 more)
extras/gplvm/: CMakeLists.txt  main.cpp
extras/mesh2pcdN/: CMakeLists.txt  main.cpp
include/: gplvm.hpp  kernel.hpp  quaternion.hpp
include/cpd/: registration.hpp
src/: gplvm.cpp  kernel.cpp  main.cpp  quaternion.cpp
src/cpd/: affinity_eigenvectors.cpp  affinity_matrix.cpp  find_P.cpp  nonrigid.cpp  registration.cpp  sigma2.cpp
